Closed Bug 407533 Opened 18 years ago Closed 18 years ago

Camino 1.5.4 crashes [@ nsCOMPtr_base::assign_with_AddRef(nsISupports*)] [@ nsCOMPtr_base::~nsCOMPtr_base] [@ nsCOMArray_base::~nsCOMArray_base()] when closing Camino after closing all tabs

Categories

(Camino Graveyard :: General, defect)

PowerPC
macOS
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.6

People

(Reporter: tstohr, Assigned: stuart.morgan+bugzilla)

References

Details

(Keywords: fixed1.8.1.12, Whiteboard: [camino-1.5.5])

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X; de; rv:1.8.1.11) Gecko/20071128 Camino/1.5.4 (MultiLang) Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X; de; rv:1.8.1.11) Gecko/20071128 Camino/1.5.4 (MultiLang) Camino 1.5.4 chrashes almost every time you do the steps to reproduce this bug. This appears under Mac OS X 10.5.1, and Mac OS X 10.4.11 with all updates installed. I use German as my default language. It appeared directly after updating Camino from 1.5.3 ML. The English version has this problem, too. It could be because of the new site icon remove function. Almost everytime I open a website that's not within my bookmarks, Camino doesn't crash. If I open a bookmark, it does. So, perhaps, it crashes when not removing a site icon from icon cache. Tried the whole thing also with a clean profile via Troubelshoot Camino: the same result. Reproducible: Always Steps to Reproduce: 1. Open some tabs. Doesn't matter if they contain a website or are blank 2. Close all tabs via Cmd+W 3. Quit Camino (vid Cmd+Q) Actual Results: Camino crashes. Mac OS X offers ability to do a report.
Tobias, can you please copy the Mac OS X crash log into a new plain-text file and attach the file to this bug?
Keywords: crash
Attached file Mac OS X crash log
Sorry I forgot this. Crash and Log were made under Mac OS X 10.5.1 If you need one from 10.4.11 too or more infos, just tell me.
Oh, yay, I think this is the bug Sam wanted someone who could repro reliably! This is already the topcrash for Camino 1.5.4.
Keywords: topcrash
Summary: Camino 1.5.4 crashes under Mac OS X 10.5, 10.4 when closing Camino after closing all tabs → Camino 1.5.4 crashes [@ nsCOMPtr_base::assign_with_AddRef(nsISupports*)] under Mac OS X 10.5, 10.4 when closing Camino after closing all tabs
This has got the @#$##$@ missing symbols again for Camino code. Talkback reports are showing -[PreferenceManager refreshStyleSheet:load:]() [/builds/tinderbox/Cm1.5.4/Darwin_8.10.1_Depend/build/ppc/camino//builds/tinderbox/Cm1.5.4/Darwin_8.10.1_Depend/build/ppc/camino/src/preferences/PreferenceManager.mm, line 1084] -[PreferenceManager refreshAdBlockingStyleSheet:]() [/builds/tinderbox/Cm1.5.4/Darwin_8.10.1_Depend/build/ppc/camino//builds/tinderbox/Cm1.5.4/Darwin_8.10.1_Depend/build/ppc/camino/src/preferences/PreferenceManager.mm, line 670] -[PreferenceManager syncMozillaPrefs]() [/builds/tinderbox/Cm1.5.4/Darwin_8.10.1_Depend/build/ppc/camino//builds/tinderbox/Cm1.5.4/Darwin_8.10.1_Depend/build/ppc/camino/src/preferences/PreferenceManager.mm, line 840] -[PreferenceManager initMozillaPrefs]() [/builds/tinderbox/Cm1.5.4/Darwin_8.10.1_Depend/build/ppc/camino//builds/tinderbox/Cm1.5.4/Darwin_8.10.1_Depend/build/ppc/camino/src/preferences/PreferenceManager.mm, line 648] -[PreferenceManager init]() [/builds/tinderbox/Cm1.5.4/Darwin_8.10.1_Depend/build/ppc/camino//builds/tinderbox/Cm1.5.4/Darwin_8.10.1_Depend/build/ppc/camino/src/preferences/PreferenceManager.mm, line 378] +[PreferenceManager sharedInstance]() [/builds/tinderbox/Cm1.5.4/Darwin_8.10.1_Depend/build/ppc/camino//builds/tinderbox/Cm1.5.4/Darwin_8.10.1_Depend/build/ppc/camino/src/preferences/PreferenceManager.mm, line 360] -[SiteIconCache cacheDirectory]() [/builds/tinderbox/Cm1.5.4/Darwin_8.10.1_Depend/build/ppc/camino//builds/tinderbox/Cm1.5.4/Darwin_8.10.1_Depend/build/ppc/camino/src/browser/SiteIconCache.mm, line 174] -[SiteIconCache imageDataFileWithUUID:]() [/builds/tinderbox/Cm1.5.4/Darwin_8.10.1_Depend/build/ppc/camino//builds/tinderbox/Cm1.5.4/Darwin_8.10.1_Depend/build/ppc/camino/src/browser/SiteIconCache.mm, line 179] -[SiteIconCache removeImageForURL:uuid:]() [/builds/tinderbox/Cm1.5.4/Darwin_8.10.1_Depend/build/ppc/camino//builds/tinderbox/Cm1.5.4/Darwin_8.10.1_Depend/build/ppc/camino/src/browser/SiteIconCache.mm, line 230] -[SiteIconCache shutdownNotification:]() [/builds/tinderbox/Cm1.5.4/Darwin_8.10.1_Depend/build/ppc/camino//builds/tinderbox/Cm1.5.4/Darwin_8.10.1_Depend/build/ppc/camino/src/browser/SiteIconCache.mm, line 310] for those frames; whether that is accurate or not, I don't know. This may be a different nsCOMPtr crash than the one Sam was talking about, but the other nsCOMPtr crash is also implicating that same block of Camino code.
Awesome, thanks for tracking down the symbols (they are indeed accurate. I know what's going on now, and I'll have a patch shortly. Tobias, good call on the change responsible ;)
Assignee: nobody → stuart.morgan
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attached patch fixSplinter Review
This should take care of it.
Attachment #292324 - Flags: superreview?(mark)
Attachment #292324 - Flags: superreview?(mark) → superreview+
Landed on trunk, MOZILLA_1_8_BRANCH, and CAMINO_1_5_BRANCH. Tobias, thanks for reporting this.
Status: NEW → RESOLVED
Closed: 18 years ago
Flags: camino1.5.5? → camino1.5.5+
Resolution: --- → FIXED
Whiteboard: [camino-1.5.5]
Target Milestone: --- → Camino1.6
This is indeed showing up as the vast majority of the the nsCOMPtr_base::~nsCOMPtr_base stacks, too, in the 1.5.4 Talkback.
Summary: Camino 1.5.4 crashes [@ nsCOMPtr_base::assign_with_AddRef(nsISupports*)] under Mac OS X 10.5, 10.4 when closing Camino after closing all tabs → Camino 1.5.4 crashes [@ nsCOMPtr_base::assign_with_AddRef(nsISupports*)] [@ nsCOMPtr_base::~nsCOMPtr_base] when closing Camino after closing all tabs
Also as nsCOMArray_base::~nsCOMArray_base().
Summary: Camino 1.5.4 crashes [@ nsCOMPtr_base::assign_with_AddRef(nsISupports*)] [@ nsCOMPtr_base::~nsCOMPtr_base] when closing Camino after closing all tabs → Camino 1.5.4 crashes [@ nsCOMPtr_base::assign_with_AddRef(nsISupports*)] [@ nsCOMPtr_base::~nsCOMPtr_base] [@ nsCOMArray_base::~nsCOMArray_base()] when closing Camino after closing all tabs
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: