Camino only - Bug 407533: Don't allow the pref system to be reinitialized when cleaning the icon cache on shutdown. r/sr=mento